[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
anchor-client = "0.32.1"
litesvm = { version = "0.1.0", path = "../programs/litesvm" }
litesvm-token = "0.6.1"

solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"]}
solana-rpc-client = "3.0.3"
solana-address = "1.0.0"
solana-account = "2.2.1"